# bevy-interactive-gol

./: Cargo.toml
assets/shaders/: circle.wgsl  conway.wgsl
src/: conway.rs  hello.rs  main.rs  paddle.rs
