[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
bevy = {version="0.12.1", features = ["dynamic_linking"]}
bytemuck = "1.14.0"
futures-lite = "2.1.0"
rand = "0.8.5"
wgpu = "0.17.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
